--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "nodejs-simple-login",
   "version": "1.0.0",
   "description": "A simple example of nodejs,mongodb,passportjs login api",
-  "main": "server.js",
+  "main": "./server.js",
   "scripts": {
+
+    "start": "pm2-runtime pm2-dev.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
